Added request to the api and displayed the response data

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,3 +31,15 @@
     transform: rotate(360deg);
   }
 }
+
+.players {
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+}
+
+.player {
+	width: 100%;
+	max-width: 33%;
+	flex-basis: 33%;
+}
